css tweaks to get to fit screen correctly on mobile

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,7 +6,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height: 100vh;
 }
 
 * { box-sizing: border-box;}
@@ -14,4 +13,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+body > #root > div {
+  height: 100vh;
 }
